# Enable only Misc-C++ benchmarks
if(TEST_SUITE_BENCH_SAMPLE)
  add_subdirectory(Misc-C++)
  return()
endif()

add_subdirectory(Adobe-C++)
add_subdirectory(BenchmarkGame)
add_subdirectory(CoyoteBench)
add_subdirectory(Dhrystone)
add_subdirectory(Linpack)
add_subdirectory(McGill)
add_subdirectory(Misc)
add_subdirectory(Misc-C++)
add_subdirectory(Misc-C++-EH)
add_subdirectory(Polybench)
add_subdirectory(Shootout)
add_subdirectory(Shootout-C++)
add_subdirectory(SmallPT)
add_subdirectory(Stanford)
